@@ -574,14 +574,13 @@ bool qjackctlSetup::parse_args ( const QStringList& args )
 			return false;
 		}
 		else if (sArg == "-v" || sArg == "--version") {
-			out << QObject::tr("Qt: %1\n")
+			out << QString("Qt: %1\n")
 				.arg(qVersion());
-			out << QObject::tr("%1: %2  (%3)\n")
+			out << QString("%1: %2\n")
 				.arg(QJACKCTL_TITLE)
-				.arg(CONFIG_BUILD_VERSION)
-				.arg(CONFIG_BUILD_DATE);
+				.arg(CONFIG_BUILD_VERSION);
 		#ifdef CONFIG_JACK_VERSION
-			out << QObject::tr("JACK: %1\n")
+			out << QString("JACK: %1\n")
 				.arg(jack_get_version_string());
 		#endif
 			return false;
